[package]
name = "account"
version.workspace = true
edition.workspace = true

[dependencies]
gstd.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true
account-io.workspace = true

[dev-dependencies]
gtest.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
account-io.workspace = true


[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], tag = "v1.0.0" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
account-io = { path = "account-io" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", features = ["wasm-opt"], tag = "v1.0.0" }
gtest = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.0" }


